[gd_scene load_steps=35 format=2]

[ext_resource path="res://Images/frame.png" type="Texture" id=1]
[ext_resource path="res://Fonts/MilkyNice.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Start.gd" type="Script" id=3]
[ext_resource path="res://Scripts/MenuButtons.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Title.gd" type="Script" id=5]
[ext_resource path="res://Scripts/BackToStart.gd" type="Script" id=6]
[ext_resource path="res://Scripts/ResetRecordWindow.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Restart.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Scoreboard.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 150
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=16]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=19]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="DynamicFont" id=21]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="DynamicFont" id=23]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 881.455, 4 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 10, 100 )

[node name="Game" type="Node2D"]
script = ExtResource( 9 )

[node name="frame" type="Sprite" parent="."]
position = Vector2( 512.129, 288.104 )
scale = Vector2( 2.04776, 2.87868 )
texture = ExtResource( 1 )

[node name="UI" type="Node2D" parent="."]

[node name="Menu" type="Node2D" parent="UI"]
script = ExtResource( 4 )

[node name="Title" type="Node2D" parent="UI/Menu"]
script = ExtResource( 5 )

[node name="Title" type="Label" parent="UI/Menu/Title"]
margin_top = 133.0
margin_right = 1024.0
margin_bottom = 233.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Run Horse Run"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/Menu/Title"]

[node name="Score" type="Node2D" parent="UI/Menu"]
script = ExtResource( 12 )

[node name="Label" type="Label" parent="UI/Menu/Score"]
margin_left = 445.0
margin_top = -200.0
margin_right = 579.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/Menu/Score"]

[node name="Start" type="Node2D" parent="UI/Menu"]
script = ExtResource( 3 )

[node name="StartMenu" type="VBoxContainer" parent="UI/Menu/Start"]
margin_left = 384.0
margin_top = 300.0
margin_right = 640.0
margin_bottom = 432.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI/Menu/Start/StartMenu"]
margin_right = 256.0
margin_bottom = 64.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start"
flat = true

[node name="ResetRecord" type="Button" parent="UI/Menu/Start/StartMenu"]
margin_top = 68.0
margin_right = 256.0
margin_bottom = 113.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Reset Record"
flat = true

[node name="Quit" type="Button" parent="UI/Menu/Start/StartMenu"]
margin_top = 117.0
margin_right = 256.0
margin_bottom = 181.0
custom_styles/focus = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
flat = true

[node name="move_tween" type="Tween" parent="UI/Menu/Start"]

[node name="BackToStart" type="Node2D" parent="UI/Menu"]
script = ExtResource( 6 )

[node name="BackToStart" type="Button" parent="UI/Menu/BackToStart"]
margin_left = 894.0
margin_top = -64.0
margin_right = 1021.0
custom_styles/focus = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/Menu/BackToStart"]

[node name="Restart" type="Node2D" parent="UI/Menu"]
script = ExtResource( 10 )

[node name="Restart" type="Button" parent="UI/Menu/Restart"]
margin_left = 376.0
margin_top = -100.0
margin_right = 666.0
margin_bottom = -32.0
custom_styles/focus = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start Again"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/Menu/Restart"]

[node name="HighScore" type="Node2D" parent="UI/Menu"]
position = Vector2( 4, 0 )

[node name="Label" type="Label" parent="UI/Menu/HighScore"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HighScore:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="UI/Menu/HighScore"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unlocked" type="Node2D" parent="UI/Menu"]
position = Vector2( 4, 24 )

[node name="Label" type="Label" parent="UI/Menu/Unlocked"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Unlocked:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animals" type="Label" parent="UI/Menu/Unlocked"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ox"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetRecordWindow" type="Node2D" parent="UI/Menu"]
position = Vector2( 260, -450 )
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="UI/Menu/ResetRecordWindow"]
margin_right = 500.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Menu/ResetRecordWindow"]
margin_left = 89.0
margin_top = 40.0
margin_right = 394.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Clear game record?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="UI/Menu/ResetRecordWindow"]
margin_left = 71.0
margin_top = 160.0
margin_right = 192.0
margin_bottom = 245.0
custom_styles/focus = SubResource( 20 )
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Yes"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="UI/Menu/ResetRecordWindow"]
margin_left = 326.0
margin_top = 160.0
margin_right = 423.0
margin_bottom = 249.0
custom_styles/focus = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "No"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/Menu/ResetRecordWindow"]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2147483656
collision_mask = 135

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 512, 580 )
shape = SubResource( 17 )

[node name="Scoreboard" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scoreboard"]
position = Vector2( -10, 480 )
shape = SubResource( 18 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="EnemySpawnPos" type="Position2D" parent="."]
position = Vector2( 1100, 540 )

[node name="BossSpawnPos" type="Position2D" parent="."]
position = Vector2( 872.2, 447.06 )

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="SpellpaperTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="PowerModeTimer" type="Timer" parent="."]
wait_time = 4.0
[connection signal="pressed" from="UI/Menu/Start/StartMenu/Start" to="UI/Menu" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/Menu/Start/StartMenu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="UI/Menu/Start/StartMenu/ResetRecord" to="UI/Menu" method="_on_ResetRecord_pressed"]
[connection signal="pressed" from="UI/Menu/Start/StartMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="UI/Menu/BackToStart/BackToStart" to="UI/Menu" method="_on_BackToStart_pressed"]
[connection signal="pressed" from="UI/Menu/BackToStart/BackToStart" to="." method="_on_BackToStart_pressed"]
[connection signal="pressed" from="UI/Menu/Restart/Restart" to="UI/Menu/Restart" method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Menu/Restart/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Menu/ResetRecordWindow/Yes" to="UI/Menu" method="_on_Yes_pressed"]
[connection signal="pressed" from="UI/Menu/ResetRecordWindow/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="UI/Menu/ResetRecordWindow/No" to="UI/Menu" method="_on_No_pressed"]
[connection signal="body_entered" from="Scoreboard" to="." method="_on_Scoreboard_body_entered"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]
[connection signal="timeout" from="SpellpaperTimer" to="." method="_on_SpellpaperTimer_timeout"]
[connection signal="timeout" from="PowerModeTimer" to="." method="_on_PowerModeTimer_timeout"]
